# dynamic-resonance-rooting

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DRR_Tutorial.ipynb  README.md  SECURITY.md  __init__.py  analysis.py  biogrowth-worker.js  config.yml  dynamic-resonance-rooting  fea-worker.js  index.html  layer1_regulatory_backend.py  layer2_tableau_blueprint.twb  modalWorker.js  pyproject.toml  reactionDiffusionWorker.js  requirements.txt  resonance-worker.js  run_tests.sh  script.js  setup.py  structuralWorker.js  style.css  tableau_calculated_fields.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  research_question.md
.github/workflows/: pypi-publish.yml  python-app.yml
.jules/: bolt.md
assets/web-demo/: modalWorker.js  reactionDiffusionWorker.js  structuralWorker.js  style.css
data/processed/: README.md
data/raw/: README.md  coupled_oscillator_sample.csv
docs/: api.md  architecture.md  audience-guide.md  conf.py  developer-guide.md  examples.md  faq.md  index.rst  method-crosswalk.md  reproducibility.md  user-guide.md  validation-readiness-guide.md
docs/superpowers/plans/: 2026-07-01-research-quality-polish.md
drr_framework/: __init__.py  analysis.py  benchmarks.py  datasets.py  generative_design_suite.py  modules.py  qbism_agent.py  realtime.py  reporting.py  state_space.py  supervision.py  validation.py  validation_readiness.py  visualizations.py
examples/: physics_lab.py  policy_lab.py  quickstart_resonance_export.py  state_space_lab.py  supervisory_policy_lab.py
notebooks/: DRR_Tutorial.ipynb  Heston_Model_Tutorial.ipynb  Real_Time_DRR_Tutorial.ipynb
paper/: README.md  legacy-prototype-fragment.md
results/expected/: README.md  quickstart_expected_summary.json
results/reproduction/: drr_reproduction_metrics.csv  drr_reproduction_summary.json
scripts/: prepare_uci_har_data.py  run_analysis.py
src/drr_framework/: __init__.py  _spectral.py  analysis.py  benchmarks.py  datasets.py  experiments.py  generative_design_suite.py  modules.py  particle_filter.py  qbism_agent.py  realtime.py  reporting.py  smoothers.py  state_space.py  supervision.py  validation.py  validation_readiness.py  visualizations.py
tests/: test_audience_workflows.py  test_depth_calculator.py  test_drr_framework.py  test_fft_optimization.py  test_generative_design_suite.py  test_particle_filter.py  test_qbism_agent.py  test_quickstart_example.py  test_research_grade_outputs.py  test_resonance_detector_accuracy.py  test_scipy_optional_runtime.py  test_smoothers.py  test_state_space.py  test_supervisory_alignment_pack.py  test_supervisory_workflows.py  test_validation_readiness.py  test_wavelet_detection.py
