[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drr-framework"
version = "0.2.0"
description = "Dynamic Resonance Rooting research framework for complex adaptive systems"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Christopher Woodyard" }
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "scikit-learn",
  "networkx",
  "pandas",
  "seaborn",
  "jupyter",
  "notebook",
  "pyinform",
  "PyYAML"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.scripts]
drr-reproduce = "drr_framework.experiments:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
