[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drr-framework"
version = "0.2.0"
description = "Dynamic Resonance Rooting research framework for complex adaptive systems"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Christopher Woodyard" }
]
keywords = [
  "complex-adaptive-systems",
  "resonance-detection",
  "rooting-analysis",
  "phase-transition",
  "state-space-models",
  "scientific-computing",
  "reproducible-research",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "scikit-learn",
  "networkx",
  "pandas",
  "seaborn",
  "jupyter",
  "notebook",
  "pyinform",
  "PyYAML"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.6",
  "black>=24.8,<25",
  "mypy>=1.10,<1.15",
  "pre-commit>=3.5,<4",
]

[project.scripts]
drr-reproduce = "drr_framework.experiments:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100
extend-exclude = "notebooks"
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["src", "examples", "scripts", "tests"]
extend-exclude = ["notebooks", "paper/legacy-prototype-fragment.md"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = [
  "E402",
  "F401",
  "F541",
  "F841",
  "B007",
]

[tool.mypy]
python_version = "3.10"
files = ["src/drr_framework"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
